platter-compiler-sveltejs/static/python/tests/syntax_programs/valid_tests/flag_issue_valid.platter
piece[] of x = [1,2,3], y = [4,5,6];
start(){
    a = x == up;
    menu(1%2){}
}