platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/globaldecl_1.platter
sip of x = 1.25; y = 3.50;

start(){}